Fix z-index

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,7 @@
     left: 0;
     right: 0;
     overflow: auto;
+    z-index: 1;
   }
 }
 
